fixed scrollbar style

--- a/src/App.css
+++ b/src/App.css
@@ -24,12 +24,12 @@
 
 .nav-icon {
   font-size: 20px;
-  transition: font-size 0.3s ease-in-out;
+  cursor: pointer;
+  transition: all 0.3s ease-in-out;
 }
 
 .nav-icon:hover {
-  cursor: pointer;
-  font-size: 30px;
+  transform: scale(1.4);
 }
 
 #nav-menu .home,
@@ -37,7 +37,7 @@
 #nav-menu .skills,
 #nav-menu .projects,
 #nav-menu .contact {
-  transition: transform 0.3s ease-in-out;
+  transition: all 0.4s ease-in-out;
   cursor: pointer;
   color: #00ffff;
   font-size: 16px;
@@ -109,25 +109,22 @@
   }
 }
 
-body::-webkit-scrollbar {
+/* Horizontal Scrollbar Styling Universally  */
+
+*::-webkit-scrollbar {
   width: 10px;
 }
-body::-webkit-scrollbar-thumb {
+
+*::-webkit-scrollbar-thumb {
   background: #00ffff;
-  border-radius: 50%;
+  border-radius: 20px;
 }
 
-body {
-  scrollbar-width: thin;
-  scrollbar-color: #00ffff #c651cd;
-}
-body::-webkit-scrollbar-thumb {
-  background-color: #00ffff;
-  border-radius: 6px;
-}
-body::-webkit-scrollbar-track {
+*::-webkit-scrollbar-track {
   background-color: #c651cd;
 }
+
+/* Heart Icon in Contact Section  */
 
 .contact-heart-icon {
   color: red;
